--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="./stylePageOne.css">
-    <title>Document</title>
+    <title>Page 1</title>
 </head>
 <body>
     <!-- header -->
     <div class="header">
         <div class="header__container">
+            <!-- bar icon -->
+            <div class="bar__icon">
+                <div class="bar__item">
+                    <i class="fal fa-bars"></i>
+                </div>
+            </div>
+
             <!-- logo -->
             <div class="logo">
                 <img src="./images/pageOneImages/logo-svg.svg" alt="logo">
@@ -20,11 +27,11 @@
 
             <!-- nav-list -->
             <div class="nav__list">
-                <div class="list__item">HÀNG MỚI</div>
-                <div class="list__item">SẢN PHẨM</div>
-                <div class="list__item">ÁO THUN "NIỀM VUI THIẾT YẾU"</div>
+                <div class="list__item list__item1">HÀNG MỚI</div>
+                <div class="list__item list__item2">SẢN PHẨM</div>
+                <div class="list__item list__item3">ÁO THUN "NIỀM VUI THIẾT YẾU"</div>
                 <div class="list__item list__item4">SALE LẠC QUAN</div>
-                <div class="list__item">SHOWROOM</div>
+                <div class="list__item list__item5">SHOWROOM</div>
             </div>
 
             <!-- input -->
@@ -41,12 +48,6 @@
                 <i class="fal fa-shopping-bag"></i>
             </div>
 
-            <!-- bar icon -->
-            <div class="bar__icon">
-                <div class="bar__item">
-                    <i class="far fa-bars"></i>
-                </div>
-            </div>
         </div>
 
         <!-- Nav-overlay -->
@@ -95,7 +96,63 @@
         </div>
         <div class="overlay"></div>
 
+        <!-- input-overlay -->
+        <div class="input__overlay">
+            <div class="input__overlay__container">
+                <input class="overlay__box__item" type="text" placeholder="Tìm kiếm...">
+                <i class="fal fa-times"></i>
+            </div>
+        </div>
+
     </div>
+
+    <!-- list product -->
+    <div class="list__product">
+        <div class="product__container">
+            <!-- list content -->
+            <div class="product__content">
+                <div class="pr__content__item shoes">
+                    <div class="product__item">GIÀY</div>
+                    <div class="product__item">Giày Snackers</div>
+                    <div class="product__item">Giày cao gót</div>
+                </div>
+
+                <div class="pr__content__item bags">
+                    <div class="product__item">TÚI</div>
+                    <div class="product__item">Túi cỡ nhỏ</div>
+                    <div class="product__item">Túi cỡ trung</div>
+                </div>
+
+                <div class="pr__content__item accessory">
+                    <div class="product__item">PHỤ KIỆN</div>
+                    <div class="product__item">Mắt kính</div>
+                    <div class="product__item">Trang sức</div>
+                </div>
+
+                <div class="pr__content__item t-shirt">
+                    <div class="product__item">ÁO THUN</div>
+                    <div class="product__item">Top giàu sang</div>
+                    <div class="product__item">Bánh mì Sài Gòn</div>
+                </div>
+
+                <div class="pr__content__item collection">
+                    <div class="product__item">BỘ SƯU TẬP</div>
+                    <div class="product__item">Juno Snackers Thả Thính Mùa Hè</div>
+                    <div class="product__item">Summer Taste</div>
+                </div>
+            </div>
+
+            <!-- product footer -->
+            <div class="product__footer">
+                <p class="product__freeShip">
+                    Miễn phí giao hàng toàn quốc từ hoá đơn 300.000 đồng | 
+                    Thời gian đổi trả lên đến 30 ngày.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- Slider -->
     <div class="home__slider">
@@ -125,6 +182,108 @@
               </span>
             </a>
           </div>
+    </div>
+
+    <!-- Content container -->
+    <div class="content__container">
+        <!-- section 1 -->
+        <div class="section1">
+            
+            <!-- title -->
+            <div class="s1__title">
+                <h4>MỚI NHẤT</h4>
+                <p>
+                    Lần đầu tiên Juno & Hnoss hợp tác, mang đến những Bộ sư tập 
+                    áo thun "Niềm vui thiết yếu", lan tỏa năng lượng tích cực.
+                </p>
+            </div>
+
+            <!-- list img -->
+            <div class="card__container">
+
+                <div class="card-deck">
+                    <div class="card card__item">
+                        <img class="card-img-top" src="./images/pageOneImages/h.1_12cc31f766904c37b3bce1dd3f4d8a7c.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-title">Áo Thun "Top Giàu Sang"</p>
+                            <p class="card-text">
+                                <strong>249.000đ</strong>
+                            </p>
+                            <div class="choose__color">
+                                <div class="color__item color__item1"></div>
+                                <div class="color__item color__item2"></div>
+                                <div class="color__item color__item3"></div>
+                            </div>
+                            <!-- <div class="choose__size">S</div> -->
+                            <div class="buy__now">
+                                <span>MUA NGAY</span>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="card card__item">
+                        <img class="card-img-top" src="./images/pageOneImages/h.2_6bf59165be1543eaa92f36a70d5f5996.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-title">Áo Thun "Hành Khoẻ Đẹp"</p>
+                            <p class="card-text">
+                                <strong>249.000đ</strong>
+                            </p>
+                            <div class="choose__color">
+                                <div class="color__item color__item1"></div>
+                                <div class="color__item color__item2"></div>
+                                <div class="color__item color__item3"></div>
+                            </div>
+                            <!-- <div class="choose__size">S</div> -->
+                            <div class="buy__now">
+                                <span>MUA NGAY</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card__item">
+                        <img class="card-img-top" src="./images/pageOneImages/h.3_a78a6d51314547e0bff03aef0ad735b7.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-title">Áo Thun "Bánh Mỳ Sài Gòn"</p>
+                            <p class="card-text">
+                                <strong>249.000đ</strong>
+                            </p>
+                            <div class="choose__color">
+                                <div class="color__item color__item1"></div>
+                                <div class="color__item color__item2"></div>
+                                <div class="color__item color__item3"></div>
+                            </div>
+                            <!-- <div class="choose__size">S</div> -->
+                            <div class="buy__now">
+                                <span>MUA NGAY</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card card__item">
+                        <img class="card-img-top" src="./images/pageOneImages/h.4_42a53da86fd544a0902682ff9a93468e.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-title">Áo Thun "Hành Trứng Ấm Êm"</p>
+                            <p class="card-text">
+                                <strong>249.000đ</strong>
+                            </p>
+                            <div class="choose__color">
+                                <div class="color__item color__item1"></div>
+                                <div class="color__item color__item2"></div>
+                                <div class="color__item color__item3"></div>
+                            </div>
+                            <!-- <div class="choose__size">S</div> -->
+                            <div class="buy__now">
+                                <span>MUA NGAY</span>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+            </div>
+
+        </div>
+
+        <!-- section 2 -->
+
     </div>
 
 
